--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
+    "@mdi/js": "^7.3.67",
     "axios": "^1.6.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
