--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run test:unit
 
       - name: Start the application (for E2E tests)
-        run: npm run serve
+        run: npm run serve &
   
       - name: Wait for the application to be ready
         run: npx wait-on http://localhost:8080
