--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: npm start
+          start: npm run serve
           wait-on: 'http://localhost:8080' # Waits for above
           record: true
           parallel: true # Runs test in parallel using settings above
