--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,5 +1,12 @@
 name: Cypress Tests
-on: [push]
+on: 
+    push:
+        branches: 
+            -main
+    workflow_run:
+        workflows: ["VueJS CI/CD"]
+        types:
+        - completed
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
